# a1-stack-analyser

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.githooks/: pre-commit
src/: analyser.rs  main.rs
src/payload/: helpers.rs  languages.json  languages.rs  match_all_files.rs  mod.rs  payload.rs
src/provider/: base.rs  fake.rs  mod.rs
src/rules/: loader.rs  match_dependencies.rs  match_files.rs  mod.rs  register.rs
src/rules/analytics/: amplitude.rs  mod.rs
src/rules/db/: postgres.rs
src/rules/js/: mod.rs  react.rs  typescript.rs
src/rules/spec/: mod.rs
src/rules/spec/docker/: component.rs  mod.rs
src/rules/spec/nodejs/: component.rs  mod.rs
src/rules/spec/rust/: component.rs  mod.rs
src/types/: mod.rs  rule.rs  techs.rs
ts/: index.ts
ts/common/: techs.generated.ts
ts/rules/analytics/: amplitude.ts
