[package]
name = "a1-stack-analyser"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
futures = "0.3.31"
lazy_static = "1.5.0"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
serial_test = "3.2.0"
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["v4"] }
